--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "ra-input-rich-text": "^5.1.2",
     "react": "^18.3.0",
     "react-admin": "^5.1.0",
-    "react-dom": "^18.3.0"
+    "react-dom": "^18.3.0",
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@types/node": "^20.10.7",
