--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
+    "@mui/material": "^5.16.7",
     "ra-data-json-server": "^5.1.0",
     "ra-input-rich-text": "^5.1.2",
     "react": "^18.3.0",
