--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mui/material": "^5.16.7",
+    "json-server": "^0.17.4",
     "ra-data-json-server": "^5.1.0",
     "ra-input-rich-text": "^5.1.2",
     "react": "^18.3.0",
