--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@mui/material": "^5.16.7",
     "json-server": "^0.17.4",
+    "jwt-decode": "^4.0.0",
     "ra-data-json-server": "^5.1.0",
     "ra-input-rich-text": "^5.1.2",
     "react": "^18.3.0",
